@@ -663,3 +663,5 @@
 20040325 input.c,joystick.[ch],ui/sdl/{sdljoystick.c,sdlkeyboard.c},
 	 widget/menu_data.c: make the SDL joystick code use the new input
 	 layer; also a couple of SDL compilation fixes.
+20040325 sound.c: use 16 bits when mixing sound samples (patch #911525)
+	 (Stuart Brady).
